# LangGraph-Tutorial

./: .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
academy_notebooks/module-2/: state-reducers.ipynb
academy_notebooks/module-3/: dynamic-breakpoints.ipynb  edit-state-human-feedback.ipynb
academy_notebooks/module-4/: parallelization.ipynb  sub-graph.ipynb
academy_notebooks/module-6/: assistant.ipynb  connecting.ipynb  creating.ipynb  double-texting.ipynb
docs/: README.md  module-0-basics.md  module-1-graphs-to-agents.md  module-2-state-and-memory.md  module-3-human-in-the-loop.md  module-4-controllability.md
module-0/01-basics/: basics.ipynb  walkthrough.md
module-1/: chain.ipynb  router.ipynb  simple_graph.ipynb
module-1/01-simple-graph/: walkthrough.md
module-1/02-chain/: walkthrough.md
module-1/03-router/: walkthrough.md
module-1/04-agent/: agent.ipynb  walkthrough.md
module-1/05-agent-memory/: agent-memory.ipynb  walkthrough.md
module-1/06-deployment/: walkthrough.md
module-1/studio/: agent.py  langgraph.json  requirements.txt  router.py  simple.py
module-2 /: state-schema.ipynb
module-2 /01-state-schema/: state-schema.ipynb  walkthrough.md
module-2 /02-state-reducers/: state-reducers.ipynb  walkthrough.md
module-2 /03-multiple-schema/: multiple-schema.ipynb  walkthrough.md
module-2 /04-trim-filter-messages /: trim-filtering-messages.ipynb  walkthrough.md
module-2 /05-chatbot-summerization/: chatbot-summerization.ipynb  walkthrough.md
module-2 /06-chatbot-external-memory/: chatbot-external-memory.ipynb  (+1 more)
(+24 files in other folders)
