[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "langchain-mistralai>=1.1.4",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.25",
    "langgraph-prebuilt>=1.0.13",
    "langgraph-sdk>=0.3.14",
    "langsmith>=0.8.3",
    "notebook>=7.5.6",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
